Revision history for Padre-Plugin-SpellCheck

{{$NEXT}}

1.21   2010.12.06
        - Restored missing POT/PO translation sources (Damyan Ivanov, AZAWAWI)
        - rename method 'spell_preferences' to 'plugin_preferences',
          so that the dialog can also be called from the plugin manager (ZENOG)
        - add support for some filters (XML, HTML, LaTeX) (ZENOG)
        - fix encoding information in German translation file: ASCII to UTF-8
          #1070 (ZENOG)

1.2    2010.10.29
        - Removed Test::NeedsDisplay dependency (AZAWAWI)

1.1.3  2010.10.27
        - Compatibility with the latest Padre (ZENOG, AZAWAWI)
        - Added German translation (ZENOG)
        - Added Japanese translation (ISHIGAKI)
        - Fixed translations in share directory and removed old one(AZAWAWI)
        - Switched to Dist::Zilla (AZAWAWI)
        - t/00-load.t is magically injected by [@PadrePlugin] via [LoadTests] (AZAWAWI)

1.1.2 2009.6.20
        - Add Chinese (Traditional) translation (bluet)
        - spanish translation added (brunov)
        - remove .po files from MANIFEST.SKIP, they are needed for Debian
          since they are the source for the .mo files (ryan52)
        - if the user selects one of the suggestions, replace it (ryan52)

1.1.1 2009.5.8
        - work-around for unicode texts (therek)

1.1.0 2009.4.29
        - possibility to choose dictionary language
          (but wx::stc has unicode bugs which prevents this feature to be
          really useful on non-ascii texts)   
        - plugin i18n-ed, ready to accept translations
        - arabic translation added (azawawi)
        - brazilian portuguese translation added (garu)
        - french translation added
        - polish translation added (therek)

1.0.0 2009.4.22
        - using a dedicated spellcheck dialog
        - on error, possibility to replace, replace all, ignore, ignore all

0.03 2009.4.5
        - providing an icon for padre's plugin manager

0.02 2009.4.5